; ModuleID = '/home/carl/AnghaBench/gb-studio/appData/src/gb/src/extr_BankData.c_SetBankedWinTiles.c'
source_filename = "/home/carl/AnghaBench/gb-studio/appData/src/gb/src/extr_BankData.c_SetBankedWinTiles.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@POP_BANK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SetBankedWinTiles(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i8* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i8* %5, i8** %12, align 8
  %13 = load i32, i32* %7, align 4
  %14 = call i32 @PUSH_BANK(i32 %13)
  %15 = load i32, i32* %8, align 4
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* %10, align 4
  %18 = load i32, i32* %11, align 4
  %19 = load i8*, i8** %12, align 8
  %20 = call i32 @set_win_tiles(i32 %15, i32 %16, i32 %17, i32 %18, i8* %19)
  %21 = load i32, i32* @POP_BANK, align 4
  ret void
}

declare dso_local i32 @PUSH_BANK(i32) #1

declare dso_local i32 @set_win_tiles(i32, i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
